--- a/style.css
+++ b/style.css
@@ -1,25 +1,31 @@
 body {
-font-family: 'popins', sans-serif;
-background-color: rgb(140, 82, 255);
+    font-family: 'Poppins', sans-serif;
+    background-color: rgb(140, 82, 255);
 }
+
 .container {
     width: 1000px;
     height: 550px;
+    /* background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(./Images/background-img.jpeg); */
     margin: 20px auto;
 }
+
 .calculator {
     width: 320px;
     height: 520px;
     background-color: #eaedef;
+    /* background-color: black; DARK THEME?*/
     margin: 0 auto;
     top: 20px;
     position: relative;
     border-radius: 1rem;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2) 0 6px 20px 0 rgba(0, 0,0, 0.19);
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
 }
+
 .result {
     height: 120px;
 }
+
 .history {
     text-align: right;
     height: 20px;
@@ -28,16 +34,19 @@ background-color: rgb(140, 82, 255);
     font-size: 15px;
     color: #919191;
 }
+
 .output {
     text-align: right;
     height: 60px;
     margin: 10px 20px;
     font-size: 30px;
 }
+
 .keyboard {
     height: 400px;
 }
-.operator, .number, .empty{
+
+.operator, .number, .empty {
     width: 50px;
     height: 50px;
     margin: 15px;
@@ -47,39 +56,44 @@ background-color: rgb(140, 82, 255);
     font-weight: bold;
     font-size: 15px;
 }
-.number, .empty{
+
+.number, .empty {
     background-color: #eaedef;
 }
-.operator{
-    background-color: lightgray;
+
+.operator {
+    background-color: lightgrey;
 }
+
 .number, .operator {
     cursor: pointer;
 }
-.operator:active, .number:active{
-    font-size: 13px;
 
+.operator:active, .number:active {
+    font-size: 13px;
 }
-.operator:focus, .number:focus, .empty:focus{
+
+.operator:focus, .number:focus, .empty:focus {
     outline: 0;
 }
-.operator:nth-child(4){
+
+.operator:nth-child(4) {
     font-size: 20px;
     background-color: rgb(160, 178, 238);
 }
-.operator:nth-child(8){
+
+.operator:nth-child(8) {
     font-size: 20px;
-    background-color: rgb(160, 178, 238);
-}
-.operator:nth-child(12){
+    background-color: rgb(160, 178, 238);}
+
+.operator:nth-child(12) {
     font-size: 20px;
-    background-color: rgb(160, 178, 238);
-}
-.operator:nth-child(16){
+    background-color: rgb(160, 178, 238);}
+
+.operator:nth-child(16) {
     font-size: 20px;
-    background-color: rgb(160, 178, 238);
-}
-.operator:nth-child(20){
+    background-color: rgb(160, 178, 238);}
+
+.operator:nth-child(20) {
     font-size: 20px;
-    background-color: rgb(160, 178, 238);
-}
+    background-color: rgb(160, 178, 238);}
